--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,35 +1,31 @@
 <header [menu]="menu"></header>
 <mat-grid-list cols="3" rowHeight="100px">
-  <form #f="ngForm" (ngSubmit)="submit(f)">
+  <form #f="ngForm" (ngSubmit)="submit(f.value)">
     
     <mat-grid-tile colspan="3">
         <mat-form-field appearance="fill">
           <mat-label> Enter your card number </mat-label>
           <input
-            [(ngModel)]="credentials.cardNumber"
             ngModel
             required
-            name="cardNr"
-            #cardNr="ngModel"
-            id="cardNr"
+            name="cardNumber"
+            #cardNumber="ngModel"
+            id="cardNumber"
             pattern="[0-9]+"
             matInput
             type="text"
           />
-          <mat-error *ngIf="cardNr.invalid && (cardNr.dirty || cardNr.touched)">
-            <span *ngIf="cardNr.errors?.['required']"> Card Number is required. </span>
-            <span *ngIf="cardNr.errors?.['pattern']">Card Number should contain only numbers.</span>
+          <mat-error *ngIf="cardNumber.invalid && (cardNumber.dirty || cardNumber.touched)">
+            <span *ngIf="cardNumber.errors?.['required']"> Card Number is required. </span>
+            <span *ngIf="cardNumber.errors?.['pattern']">Card Number should contain only numbers.</span>
           </mat-error>
         </mat-form-field>
-        
-   
     </mat-grid-tile>
 
     <mat-grid-tile colspan="3">
         <mat-form-field appearance="fill">
           <mat-label> Enter your Pin </mat-label>
           <input
-            [(ngModel)]="credentials.pin"
             ngModel
             required
             name="pin"
