--- a/src/app/admin/components/transactions/transactions.component.html
+++ b/src/app/admin/components/transactions/transactions.component.html
@@ -26,30 +26,27 @@
           </td>
         </ng-container>
 
-        <!-- Position Column -->
-        <!-- <ng-container matColumnDef="position" >
-          <th mat-header-cell *matHeaderCellDef>No.</th>
-          <td mat-cell *matCellDef="let element">{{ element.nr}}</td>
-        </ng-container> -->
-
-        <!-- Name Column -->
+        <!-- Transaction ID Column -->
         <ng-container matColumnDef="transactionId">
           <th mat-header-cell *matHeaderCellDef>Transaction ID</th>
           <td mat-cell *matCellDef="let element">{{ element.transactionId }}</td>
         </ng-container>
 
           
+        <!-- Type Column -->
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef>Type</th>
             <td mat-cell *matCellDef="let element">{{ element.type }}</td>
           </ng-container>
         
+        <!-- Sender Column -->
         <ng-container matColumnDef="sender">
             <th mat-header-cell *matHeaderCellDef>Sender</th>
             <td mat-cell *matCellDef="let element">{{ element.sender }}</td>
           </ng-container>
 
         
+        <!-- Amount Column -->
         <ng-container matColumnDef="amount">
             <th mat-header-cell *matHeaderCellDef>Amount</th>
             <td mat-cell *matCellDef="let element">{{ element.amount | currency }}</td>
@@ -60,8 +57,8 @@
             <th mat-header-cell *matHeaderCellDef>Receiver</th>
             <td mat-cell *matCellDef="let element">{{ element.receiver }}</td>
           </ng-container>
-
           
+        <!-- Timestamp Column -->
           <ng-container matColumnDef="timestamp">
             <th mat-header-cell *matHeaderCellDef>Timestamp</th>
             <td mat-cell *matCellDef="let element">{{ element.timestamp | date:'medium' }}</td>
@@ -93,6 +90,7 @@
         mat-raised-button 
         color="primary"
         class="transaction-button"
+        [disabled]="selection.isEmpty()"
         (click)="revertTransaction(selection.selected)"
         >Revert Transaction</a>
   </mat-grid-tile>
